--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./style.css">
     <title>hmax | inicio</title>
 </head>
@@ -22,11 +26,71 @@
     </header>
 
     <main>
-        <img src="https://hbomax-images.warnermediacdn.com/images/GXcWsXwq07ZuAuwEAAACT/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
-        <img src="https://hbomax-images.warnermediacdn.com/images/GXvuNTw6T2IaEUwEAAAT-/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
-        <img src="https://hbomax-images.warnermediacdn.com/images/GXnEEoQ4sRMNVoAEAAB0c/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
-        <img src="https://hbomax-images.warnermediacdn.com/images/GXdu2ZAglVJuAuwEAADbA/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
-        <img src="https://hbomax-images.warnermediacdn.com/images/GXadUQAL-FZaVkgEAAAKm/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+        <div class="one">
+            <h1>Lançamento</h1>
+
+            <div class="imgs">
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXcWsXwq07ZuAuwEAAACT/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXvuNTw6T2IaEUwEAAAT-/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXnEEoQ4sRMNVoAEAAB0c/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXdu2ZAglVJuAuwEAADbA/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXadUQAL-FZaVkgEAAAKm/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+            </div>
+        </div>
+
+        <div class="two">
+            <h1>Hbo</h1>
+
+            <div class="imgs">
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXcWsXwq07ZuAuwEAAACT/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXvuNTw6T2IaEUwEAAAT-/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXnEEoQ4sRMNVoAEAAB0c/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXdu2ZAglVJuAuwEAADbA/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXadUQAL-FZaVkgEAAAKm/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+            </div>
+        </div>
+        <div class="tree">
+            <h1>Infantil</h1>
+
+            <div class="imgs">
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXcWsXwq07ZuAuwEAAACT/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXvuNTw6T2IaEUwEAAAT-/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXnEEoQ4sRMNVoAEAAB0c/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXdu2ZAglVJuAuwEAADbA/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://hbomax-images.warnermediacdn.com/images/GXadUQAL-FZaVkgEAAAKm/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+            </div>
+        </div>
+
+        <div class="cartaz">
+            <div class="card">
+                <h2>COMING SOON</h2>
+                <img src="https://hbomax-images.warnermediacdn.com/2021-02/ZSJL_16x9_3.jpg?host=wme-hbomax-drupal-prod.s3.amazonaws.com&w=960" alt="card" />
+            </div>
+
+            <div class="text">
+                <h3>
+                  ZACK SNYDER'S JUSTICE LEAGUE
+                </h3>
+
+                <h1>
+                    DON'T MISS THE NEW MOVIE STREAMING EXCLUSIVELY ON HBO MAX MARCH 18
+                </h1>
+            </div>
+        </div>
+
+        <div class="canal">
+            <img src="https://static-wmwm.warnermediacdn.com/2020-05/HBO_white_0.svg" alt="hbo" />
+            <img src="https://static-wmwm.warnermediacdn.com/2020-05/CN_white_8_0.svg" alt="cartoon network" id="cartoon"/>
+            <img src="https://static-wmwm.warnermediacdn.com/2020-06/779402_SVG-5-29_DC_White.svg" alt="dc universe" id="dcun"/>
+            <img src="https://static-wmwm.warnermediacdn.com/2020-06/779402_SVG-5-29_CrunchyRoll_White.svg" alt="Crunchyroll logo" id="roll"/>
+            <img src="https://static-wmwm.warnermediacdn.com/2020-06/WarnerBros-white.svg" alt="warner bros" id="wb"/>
+        </div>
     </main>
+
+    <footer>
+        <img src="./assets/HBO_Max_Logo.svg.png" alt="logo" />
+
+        <small>©2021 WarnerMedia Direct, LLC. All Rights Reserved. HBO Max™ is used under license.</small>
+    </footer>
 </body>
 </html>
