--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./style.css">
-    <title>hmax | inicio</title>
+    <title>HBO max | inicio</title>
 </head>
 <body>
     <header>
@@ -18,10 +18,11 @@
                 <img src="./assets/img_menu.png" alt="menu img" />
                 <img src="./assets/img_search.png" alt="pesquisa icon img" />
             </div>
-
             <img src="./assets/HBO_Max_Logo.svg.png" alt="logo" id="logo"/>
-
             <img src="./assets/images-profile.png" alt="proile"  id="profile"/>
+        </div>
+        <div class="App-logo">
+            <img src="https://image.tmdb.org/t/p/w342/qVf6lTFzDsBZUbYbk8m9dk9SipX.jpg" alt="destaque">
         </div>
     </header>
 
@@ -34,7 +35,7 @@
                 <!-- <img src="https://hbomax-images.warnermediacdn.com/images/GXvuNTw6T2IaEUwEAAAT-/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" /> -->
                 <img src="https://th.bing.com/th/id/OIP.q9J6FaTcNnfNFyB2ev0mAAHaD7?w=335&h=177&c=7&o=5&pid=1.7" alt="disney" onclick="window.open('https://firebasestorage.googleapis.com/v0/b/starplus-e20cd.appspot.com/o/falcao%20e%20soldado%20invernal%2Ffalcaoeosoldadoinvernal-temo01ep01.mp4?alt=media&token=6a1e0e27-dadd-4248-b4a2-f65ce000e0f9')"/>
                 <img src="https://hbomax-images.warnermediacdn.com/images/GXnEEoQ4sRMNVoAEAAB0c/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
-                <img src="https://hbomax-images.warnermediacdn.com/images/GXdu2ZAglVJuAuwEAADbA/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://image.tmdb.org/t/p/w1280/9QusGjxcYvfPD1THg6oW3RLeNn7.jpg" alt="aquaman" width="320"/>
                 <img src="https://image.tmdb.org/t/p/w1280/mmprryb2r0X8u9JkZCnaJIzyYX4.jpg" alt="img" width="320"/>
             </div>
         </div>
@@ -54,9 +55,9 @@
             <h1>INFANTIL</h1>
 
             <div class="imgs">
-                <img src="https://image.tmdb.org/t/p/w1280/9daKewVsUrEldMz4M2bTj3PQY2Y.jpg" alt="img" width="320"/>
-                <img src="https://hbomax-images.warnermediacdn.com/images/GXvuNTw6T2IaEUwEAAAT-/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
-                <img src="https://hbomax-images.warnermediacdn.com/images/GXnEEoQ4sRMNVoAEAAB0c/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
+                <img src="https://image.tmdb.org/t/p/w1280/9daKewVsUrEldMz4M2bTj3PQY2Y.jpg" alt="img" width="321"/>
+                <img src="https://image.tmdb.org/t/p/w1280/n1pNyAVAe0pJMwcTNYNwKGHXjVx.jpg" alt="img" width="321"/>
+                <img src="https://image.tmdb.org/t/p/w1280/qsxhnirlp7y4Ae9bd11oYJSX59j.jpg" alt="img" width="321"/>
                 <img src="https://hbomax-images.warnermediacdn.com/images/GXdu2ZAglVJuAuwEAADbA/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
                 <img src="https://hbomax-images.warnermediacdn.com/images/GXadUQAL-FZaVkgEAAAKm/tileburnedin?size=320x180&format=jpeg&partner=hbomaxcom&productCode=hbomax&host=artist.api.cdn.hbo.com&w=320" alt="img" />
             </div>
@@ -67,7 +68,6 @@
                 <h2>COMING SOON</h2>
                 <img src="https://hbomax-images.warnermediacdn.com/2021-02/ZSJL_16x9_3.jpg?host=wme-hbomax-drupal-prod.s3.amazonaws.com&w=960" alt="card" id="cartaz"/>
             </div>
-
             <div class="text">
                 <h3>
                   ZACK SNYDER'S JUSTICE LEAGUE
@@ -86,18 +86,31 @@
             <img src="https://static-wmwm.warnermediacdn.com/2020-06/779402_SVG-5-29_CrunchyRoll_White.svg" alt="Crunchyroll logo" id="roll"/>
             <img src="https://static-wmwm.warnermediacdn.com/2020-06/WarnerBros-white.svg" alt="warner bros" id="wb"/>
         </div>
+
+        <div class="four">
+            <h1>SERIES</h1>
+
+            <div class="imgs">
+                <img src="https://image.tmdb.org/t/p/w342/1sBx2Ew4WFsa1YY32vlHt079O03.jpg" alt="licifer" width="245"/>
+                <img src="https://image.tmdb.org/t/p/w342/mQ9cyw1gfpK1M3a69cgXFHvWkih.jpg" alt="gerra dos tronos" width="250"/>
+                <img src="https://image.tmdb.org/t/p/w342/wHa6KOJAoNTFLFtp7wguUJKSnju.jpg" alt="the flash" width="250"/>
+                <img src="https://image.tmdb.org/t/p/w342/y47TQybIv7GqrrAkmnt6jFciP7a.jpg" alt="the big bang of teory" width="260"/>
+                <img src="https://image.tmdb.org/t/p/w342/cfhfcEt4bOXuVZkTC0nNBpqqiWb.jpg" alt="the 100" width="255"/>
+                <img src="https://image.tmdb.org/t/p/w342/5mi3aRl16yKmfpQJMzvqN5TXkdA.jpg" alt="euforia" width="250"/>
+            </div>
+        </div>
     </main>
 
     <footer>
         <img src="./assets/HBO_Max_Logo.svg.png" alt="logo" />
 
-        <small>©2021 WarnerMedia Direct, LLC. All Rights Reserved. HBO Max™ is used under license.</small>
+        <small>&copy2021 WarnerMedia Direct, LLC. All Rights Reserved. HBO Max™ is used under license.</small>
     </footer>
 
     <script>
         let play = document.getElementById('cartaz')
-        play.onmouseover = () => {
-            window.open('https://firebasestorage.googleapis.com/v0/b/starplus-e20cd.appspot.com/o/vandavision%2Fwandavision-temp01ep9.mp4?alt=media&token=9c568935-1875-447b-bb48-8755201654e4')
+            play.onmouseover = () => {
+                window.open('https://firebasestorage.googleapis.com/v0/b/starplus-e20cd.appspot.com/o/the%20cw(WB)%2Fleague%20of%20justice%2Fleagueofthejustice-new.mp4?alt=media&token=306f6959-da83-4fe0-b857-bce74805e866')
         }
     </script>
 </body>
